--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 RapidReskinProject/UserSettings/EditorUserSettings.asset
+Anything and Everything 2/UserSettings/Layouts/default-2021.dwlt
