--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ crashlytics-build.properties
 
 RapidReskinProject/UserSettings/EditorUserSettings.asset
 Anything and Everything 2/UserSettings/Layouts/default-2021.dwlt
+Anything and Everything 2/UserSettings/Layouts/default-2021.dwlt
